# demos

./: .gitignore  CMakeLists.txt  CONTEXT.md  Example1.cpp  Example2.cpp  README.md  StbTrueTypeOpenGL.cpp
common/: ExampleBase.cpp  ExampleBase.h  Math.h  Matrix.cpp  Matrix.h  Vector3.h
demos/common/: AppBase.cpp  AppBase.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Device.cpp  Device.h  GLAppBase.cpp  GLAppBase.h  GLDevice.cpp  GLDevice.h  Mesh.cpp  Mesh.h  ShaderProgram.h  Spectator.cpp  Spectator.h  Transform.cpp  Transform.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  Window.h
demos/common/gl/: GLAppBase.h  GLDevice.cpp  GLDevice.h  OpenGLAppBase.cpp  OpenGLAppBase.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLWindow.cpp  OpenGLWindow.h  ShaderProgram.cpp  ShaderProgram.h
demos/common/vk/: DescriptorSet.cpp  DescriptorSet.h  VkAppBase.cpp  VkAppBase.h  VkDevice.cpp  VkDevice.h  VulkanAppBase.cpp  VulkanAppBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCmdBuffer.cpp  VulkanCmdBuffer.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanResource.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanWindow.cpp  VulkanWindow.h
demos/imgui/: CMakeLists.txt  Main.cpp
demos/imgui/gl/: Main.cpp
demos/imgui/vk/: Main.cpp
demos/skybox/: CMakeLists.txt  Main.cpp
demos/skybox/gl/: Main.cpp  Shaders.h
demos/stb-truetype/: CMakeLists.txt  Main.cpp  Shaders.h
demos/stb-truetype/gl/: Main.cpp  Shaders.h
demos/transform/: CMakeLists.txt  Main.cpp  Shaders.h
demos/transform/gl/: Main.cpp  Shaders.h
demos/transform/vk/: Main.cpp
demos/vulkan/: CMakeLists.txt  Main.cpp
projects/: Common.vcxproj  Common.vcxproj.filters  Demos.sln  Example1.vcxproj  Example1.vcxproj.filters  Example2.vcxproj  Example2.vcxproj.filters  Examples.sln  StbTrueType.vcxproj  StbTrueType.vcxproj.filters  StbTrueTypeOpenGL.vcxproj  StbTrueTypeOpenGL.vcxproj.filters  StbTrueTypeOpenGLBaked.vcxproj  StbTrueTypeOpenGLBaked.vcxproj.filters  Transform.vcxproj  Transform.vcxproj.filters  Vendor.vcxproj  Vendor.vcxproj.filters
src/: StbTrueTypeOpenGL.cpp  StbTrueTypeOpenGLBaked.cpp  Transform.cpp
src/common/: AppBase.cpp  AppBase.h  Camera.cpp  Camera.h  Common.h  DemoBase.cpp  DemoBase.h  Device.cpp  Device.h  Formatter.h  Meshes.cpp  Meshes.h  ShaderProgram.cpp  Spectator.cpp  Spectator.h  Transform.cpp  Transform.h  Vector2.h
src/imgui/: ImGui.cpp
src/skybox/: Shaders.h  Skybox.cpp
src/stb-truetype/: Shaders.h  StbTrueType.cpp
src/transform/: Shaders.h  Transform.cpp
src/wip/: Wip.cpp
